Fixed text input disabled, overflow and readonly properties

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,9 +6,9 @@ h4{
     font-size: 1.9rem;
 }
 
-/* #textFormArea{
-
-} */
+#textFormArea{
+    overflow-y: scroll
+}
 /* .radio { 
     display: inline;
  } */
